Fix ul and ol on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,6 +46,7 @@ hr {
 ul,
 ol {
   margin: 2rem 0 2rem 1rem;
+  padding-left: 1rem;
 }
 
 p {
